investigator_message_metrics/base/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: investigator-message-metrics
spec:
  replicas: 1
  selector:
    service: investigator-message-metrics
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: investigator-message-metrics
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        service: investigator-message-metrics
        app.kubernetes.io/name: thoth
        app.kubernetes.io/component: investigator-message-metrics
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      serviceAccountName: investigator-message-metrics
      containers:
        - image: investigator
          name: message-metrics
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 6066
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "/_health"
              port: 6066
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 1
            # Give this consumer 2 hours to finish
            initialDelaySeconds: 7200
            periodSeconds: 10
            tcpSocket:
              port: 80
      volumes:
        - name: secrets
          secret:
            secretName: "kafka"
            items:
              - key: kafka_ca.crt
                path: kafka_ca.crt
  test: false
