investigator_message_metrics/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: investigator-message-metrics
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 6066
  selector:
    service: investigator-message-metrics
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: investigator-message-metrics
    app.kubernetes.io/managed-by: aicoe-thoth-devops
