investigator_message_metrics/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: investigator-message-metrics
spec:
  to:
    kind: Service
    name: investigator-message-metrics
